apply plugin: "java"

sourceCompatibility = 1.8
sourceSets.main.java.srcDirs = [
        "src"
]

// 指定编码
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}


